# Countdown-Solver

./: Cargo.toml  devenv.nix  devenv.yaml
benches/: my_bench.rs
src/: gcd.rs  lib.rs  main.rs  solver.rs
