[package]
name = "countdown"
version = "0.2.4"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustc-hash = "2.1"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "my_bench"
harness = false

[profile.release]
debug = false
lto = true
strip = true
panic = "abort"
