[package]
name = "countdown"
version = "0.4.2"
edition = "2024"

[[bin]]
name = "countdown"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
harness = false
name = "my_bench"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
dashmap = "6.1"
rayon = "1.11"
rustc-hash = "2.1"

[dev-dependencies]
criterion = "0.8"

[features]
default = []
cli = ["dep:clap"]

[profile.release]
debug = false
strip = true
lto = true
panic = "abort"
